<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <LinearLayout
            android:id="@+id/ll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/bg_layer"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <include
                android:id="@+id/rlToolbar"
                layout="@layout/item_toolbar" />

            <ImageView
                android:id="@+id/ivProfileImage"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_marginTop="40dp"
                android:src="@drawable/profile_place_holder" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/montserrat_semibold"
                android:text="Set profile"
                android:textAppearance="@style/TextAppearance.AppCompat.Subhead" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:orientation="vertical"
            android:padding="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat_semibold"
                android:text="@string/first_name"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

            <EditText
                android:id="@+id/etFirstName"
                android:inputType="textPersonName"
                android:background="@drawable/bg_edit_text_selector"
                style="@style/AppTheme.DefaultEditText"
                android:layout_marginTop="8dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/montserrat_semibold"
                android:text="@string/last_name"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

            <EditText
                android:id="@+id/etLastName"
                android:inputType="textPersonName"
                android:background="@drawable/bg_edit_text_selector"
                style="@style/AppTheme.DefaultEditText"
                android:layout_marginTop="8dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/montserrat_semibold"
                android:text="@string/phone"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

            <EditText
                android:id="@+id/etPhone"
                android:inputType="phone"
                android:background="@drawable/bg_edit_text_selector"
                style="@style/AppTheme.DefaultEditText"
                android:layout_marginTop="8dp" />

            <TextView
                android:id="@+id/tvLocation"
                android:layout_width="match_parent"
                android:layout_height="58dp"
                android:layout_marginTop="12dp"
                android:background="@drawable/btn_bg_orange"
                android:fontFamily="@font/montserrat_regular"
                android:gravity="center_vertical"
                android:paddingHorizontal="14dp"
                android:drawableEnd="@drawable/location"
                android:text="@string/pick_your_current_location"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textColor="@color/white" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="20dp"
                android:fontFamily="@font/montserrat_semibold"
                android:text="Or"
                android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                android:textColor="#A5A3A3" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat_semibold"
                android:text="@string/postal_code"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

            <EditText
                android:id="@+id/etPostalCode"
                android:inputType="textPostalAddress"
                android:background="@drawable/bg_edit_text_selector"
                style="@style/AppTheme.DefaultEditText"
                android:layout_marginTop="8dp"
                android:hint="@string/select_postal_code_or_address" />


            <Button
                android:id="@+id/btnSubmit"
                style="@style/AppTheme.DefaultButton"
                android:layout_marginVertical="40dp"
                android:text="@string/submit" />

        </LinearLayout>

    </LinearLayout>
</androidx.core.widget.NestedScrollView>