<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardBackgroundColor="@android:color/transparent"
    app:cardCornerRadius="4dp"
    app:cardElevation="4dp"
    app:cardUseCompatPadding="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/bg_layer"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tvTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="16dp"
                android:text="@string/add_photo"
                android:textAppearance="@style/TextAppearance.AppCompat.Title"
                android:fontFamily="@font/montserrat_bold" />

            <ImageView
                android:id="@+id/ivCancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:padding="16dp"
                android:src="@drawable/arrow_back"
                android:visibility="gone" />
        </RelativeLayout>

        <TextView
            android:id="@+id/tvGallery"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/rounded_edit_text_bg_8dp"
            android:gravity="center"
            android:padding="12dp"
            android:text="@string/gallery"
            android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
            android:fontFamily="@font/montserrat_semibold" />

        <TextView
            android:id="@+id/tvCamera"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/rounded_edit_text_bg_8dp"
            android:gravity="center"
            android:padding="12dp"
            android:text="@string/camera"
            android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
            android:fontFamily="@font/montserrat_semibold" />

        <TextView
            android:id="@+id/tvCancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:background="@drawable/rounded_edit_text_bg_8dp"
            android:gravity="center"
            android:padding="12dp"
            android:text="@string/cancel"
            android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
            android:fontFamily="@font/montserrat_semibold" />
    </LinearLayout>
</androidx.cardview.widget.CardView>