<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/bg_layer"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintBottom_toTopOf="@id/guideline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="130dp"
            android:layout_centerInParent="true"
            android:src="@drawable/app_logo" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/white"
        android:padding="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guideline">

        <TextView
            android:id="@+id/tvLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/montserrat_bold"
            android:text="@string/best_markitplac"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvLabel"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/montserrat_medium"
            android:gravity="center_horizontal"
            android:lineHeight="24dp"
            android:text="@string/info"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="@color/text_color" />

        <Button
            android:id="@+id/btnGetStarted"
            style="@style/AppTheme.DefaultButton"
            android:layout_alignParentBottom="true"
            android:text="@string/get_started"
            />
    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>