<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/bg_layer"
        android:orientation="vertical"
        android:padding="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <include
            android:id="@+id/rlToolbar"
            layout="@layout/item_toolbar" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:fontFamily="@font/montserrat_bold"
            android:text="@string/enter_your_verification_code"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textSize="34sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="40dp"
            android:fontFamily="@font/montserrat_semibold"
            android:text="@string/we_have_sent_the_code_verification_to_your_mobile_number"
            android:textAppearance="@style/TextAppearance.AppCompat.Subhead" />

    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:padding="20dp"
        android:background="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ll">

        <TextView
            android:id="@+id/tvPhone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:drawablePadding="8dp"
            android:fontFamily="@font/montserrat_bold"
            android:gravity="bottom"
            android:text="+91 1234567890"
            android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:drawableEndCompat="@drawable/edit" />

        <EditText
            android:id="@+id/etOne"
            style="@style/AppTheme.DefaultEditText"
            android:layout_width="0dp"
            android:layout_marginTop="40dp"
            android:gravity="center"
            android:hint="-"
            android:inputType="phone"
            android:maxLength="1"
            android:minWidth="74dp"
            app:layout_constraintEnd_toStartOf="@id/etTwo"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvPhone"
            app:layout_constraintWidth_default="wrap" />

        <EditText
            android:id="@+id/etTwo"
            style="@style/AppTheme.DefaultEditText"
            android:layout_width="0dp"
            android:layout_marginTop="40dp"
            android:gravity="center"
            android:hint="-"
            android:inputType="phone"
            android:maxLength="1"
            android:minWidth="74dp"
            app:layout_constraintEnd_toStartOf="@id/etThree"
            app:layout_constraintStart_toEndOf="@id/etOne"
            app:layout_constraintTop_toBottomOf="@id/tvPhone"
            app:layout_constraintWidth_default="wrap" />

        <EditText
            android:id="@+id/etThree"
            style="@style/AppTheme.DefaultEditText"
            android:layout_width="0dp"
            android:layout_marginTop="40dp"
            android:gravity="center"
            android:hint="-"
            android:inputType="phone"
            android:maxLength="1"
            android:minWidth="74dp"
            app:layout_constraintEnd_toStartOf="@id/etFour"
            app:layout_constraintStart_toEndOf="@id/etTwo"
            app:layout_constraintTop_toBottomOf="@id/tvPhone"
            app:layout_constraintWidth_default="wrap" />

        <EditText
            android:id="@+id/etFour"
            style="@style/AppTheme.DefaultEditText"
            android:layout_width="0dp"
            android:layout_marginTop="40dp"
            android:gravity="center"
            android:hint="-"
            android:inputType="phone"
            android:maxLength="1"
            android:minWidth="74dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/etThree"
            app:layout_constraintTop_toBottomOf="@id/tvPhone"
            app:layout_constraintWidth_default="wrap" />

        <Button
            android:id="@+id/btnSubmit"
            style="@style/AppTheme.DefaultButton"
            android:layout_marginTop="60dp"
            android:text="@string/submit"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/etOne" />

        <TextView
            android:id="@+id/tvResend"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:fontFamily="@font/montserrat_semibold"
            android:gravity="center"
            android:lineSpacingExtra="6dp"
            android:text="@string/don_t_receive_otp_resend"
            android:textAppearance="@style/TextAppearance.AppCompat.Caption"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btnSubmit" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>